@@ -10,7 +10,6 @@ import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Set;
 import java.util.TreeMap;
 import java.util.AbstractMap.SimpleEntry;
 
@@ -262,7 +261,7 @@ public class LoadRunWodelTestHandler extends AbstractHandler {
 				TreeMap<String, List<String>> classes = WodelTestUtils.loadClasses(classesPath);
 				boolean serialize = true;
 				try {
-					ob = cls.newInstance();
+					ob = cls.getDeclaredConstructor().newInstance();
 					Method m = cls.getMethod("execute", new Class[]{int.class, int.class, boolean.class, boolean.class, boolean.class, String[].class, IProject.class, IProgressMonitor.class, boolean.class, Object.class, TreeMap.class});
 					maxAttempts = Integer.parseInt(Platform.getPreferencesService().getString("wodel.dsls.Wodel", "Number of attempts", "0", null));
 					numMutants = Integer.parseInt(Platform.getPreferencesService().getString("wodel.dsls.Wodel", "Number of mutants", "3", null));
@@ -378,7 +377,7 @@ public class LoadRunWodelTestHandler extends AbstractHandler {
 						IConfigurationElement appropriateExtension = null;
 						for (IConfigurationElement extension : extensions) {
 							Class<?> extensionClass = Platform.getBundle(extension.getDeclaringExtension().getContributor().getName()).loadClass(extension.getAttribute("class"));
-							postprocessing = extensionClass.newInstance();
+							postprocessing = extensionClass.getDeclaredConstructor().newInstance();
 							Method getURI = extensionClass.getDeclaredMethod("getURI");
 							String uri = (String) getURI.invoke(postprocessing);
 							Method getName = extensionClass.getDeclaredMethod("getName");
@@ -396,7 +395,7 @@ public class LoadRunWodelTestHandler extends AbstractHandler {
 							}
 						}
 						Class<?> extensionClass = Platform.getBundle(appropriateExtension.getDeclaringExtension().getContributor().getName()).loadClass(appropriateExtension.getAttribute("class"));
-						postprocessing = extensionClass.newInstance();
+						postprocessing = extensionClass.getDeclaredConstructor().newInstance();
 						Method getName = extensionClass.getDeclaredMethod("getName");
 						if (getName.invoke(postprocessing).equals(extensionName) ) {
 							doProcess = extensionClass.getDeclaredMethod("doProcess", new Class[]{String.class, String.class, Resource.class, String.class});
@@ -559,7 +558,7 @@ public class LoadRunWodelTestHandler extends AbstractHandler {
 							IConfigurationElement appropriateExtension = null;
 							for (IConfigurationElement extension : extensions) {
 								Class<?> extensionClass = Platform.getBundle(extension.getDeclaringExtension().getContributor().getName()).loadClass(extension.getAttribute("class"));
-								equivalence =  extensionClass.newInstance();
+								equivalence =  extensionClass.getDeclaredConstructor().newInstance();
 								Method getURI = extensionClass.getDeclaredMethod("getURI");
 								String uri = (String) getURI.invoke(equivalence);
 								Method getName = extensionClass.getDeclaredMethod("getName");
@@ -578,7 +577,7 @@ public class LoadRunWodelTestHandler extends AbstractHandler {
 							}
 							if (appropriateExtension != null) {
 								Class<?> extensionClass = Platform.getBundle(appropriateExtension.getDeclaringExtension().getContributor().getName()).loadClass(appropriateExtension.getAttribute("class"));
-								equivalence = extensionClass.newInstance();
+								equivalence = extensionClass.getDeclaredConstructor().newInstance();
 								Method getName = extensionClass.getDeclaredMethod("getName");
 								outputPath = outputPath.substring(outputPath.indexOf(test.getProjectName()) + test.getProjectName().length() + 1, outputPath.length());
 								if (getName.invoke(equivalence).equals(discardExtensionName) ) {
